2007-12-01  Martin Nordholts  <martinn@svn.gnome.org>

	Merged from trunk:

	* docs/Makefile.am: Applied patch from Jesper de Jong that removes
	an errant leading space in a command. Fixes bug #500826.

2007-11-30  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	* app/core/gimpprojection.c (gimp_projection_idle_render_init):
	raised the idle renderer priority even higher (bug #499150).

2007-11-30  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	* app/base/tile-manager.c (tile_manager_invalidate_area): if no
	tiles have been allocated, there's no need to invalidate any.
	Should fix bug #500178.

2007-11-29  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	Merged from trunk:

	* plug-ins/Lighting/lighting_ui.c: make sure to update bumpmap
	when combo is changed.  Addresses bug #500317.

2007-11-29  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	* app/core/gimpprojection.c (gimp_projection_idle_render_init):
	raise the priority of the idle renderer to G_PRIORITY_DEFAULT_IDLE.
	Should fix bug #499150.

2007-11-28  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	* app/actions/drawable-commands.c (drawable_flip_cmd_callback):
	fixed orientation type used for linked items (bug #499161).

	* app/core/gimpdrawable-transform.c
	(gimp_drawable_transform_tiles_flip): fixed typo in if condition
	and added more sanity checks.

2007-11-26  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	* plug-ins/common/wmf.c: avoid filename encoding problems by not
	using wmf_file_open() but mapping the file into memory with
	GMappedFile. Fixes bug #499329.

2007-11-21  Sven Neumann  <sven@gimp.org>

	* configure.in: bumped version to 2.4.3 (interface age 3).

2007-11-20  Sven Neumann  <sven@gimp.org>

	* Made 2.4.2 release.

2007-11-20  Michael Natterer  <mitch@gimp.org>

	Merged from trunk:

	* app/widgets/gimpcontainercombobox.c: set the combo insensitive
	when it has no items. Fixes bug #498511.

2007-11-20  Sven Neumann  <sven@gimp.org>

	Merged from trunk:
